[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/Robot.png" type="Texture" id=1]
[ext_resource path="res://objects/BuildBot.gd" type="Script" id=2]
[ext_resource path="res://sprites/Resources.png" type="Texture" id=3]
[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sounds/BuildBot2.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 6.0

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=19]
radius = 40.0

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="DynamicFont" id=21]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="CircleShape2D" id=23]
radius = 200.0

[node name="BuildBot" type="RigidBody2D"]
collision_layer = 32
collision_mask = 16
mode = 2
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2( 1.6, 1.6 )

[node name="Base" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 4 )

[node name="Flame" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 8 )
frame = 2
playing = true

[node name="BaseEye" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 12 )

[node name="Eye" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 16 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 17 )

[node name="Factory_Spawn_Check" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 4
input_pickable = false
monitorable = false
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Factory_Spawn_Check"]
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.439216, 0.792157, 0.364706, 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 19 )

[node name="ResourceBar" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -9.0
margin_bottom = -9.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="Panel" type="Panel" parent="ResourceBar"]
margin_left = -54.0
margin_top = -49.0
margin_right = 55.0
margin_bottom = -13.0

[node name="HBoxContainer" type="HBoxContainer" parent="ResourceBar/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StoneCount" type="HBoxContainer" parent="ResourceBar/Panel/HBoxContainer"]
margin_right = 52.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="ResourceBar/Panel/HBoxContainer/StoneCount"]
margin_right = 24.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 20 )
expand = true

[node name="StoneLabel" type="Label" parent="ResourceBar/Panel/HBoxContainer/StoneCount"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 21 )
text = "0"
align = 1
valign = 1

[node name="WoodCount" type="HBoxContainer" parent="ResourceBar/Panel/HBoxContainer"]
margin_left = 56.0
margin_right = 109.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="ResourceBar/Panel/HBoxContainer/WoodCount"]
margin_right = 24.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 22 )
expand = true

[node name="WoodLabel" type="Label" parent="ResourceBar/Panel/HBoxContainer/WoodCount"]
margin_left = 28.0
margin_right = 53.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 21 )
text = "0"
align = 1
valign = 1

[node name="ResourceFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceFinder"]
shape = SubResource( 23 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="TimeoutTimer" type="Timer" parent="."]

[connection signal="timeout" from="TimeoutTimer" to="." method="_on_TimeoutTimer_timeout"]
